knowledge_base/knowledge/v15/capl/structured/ISO11783/Iso11783IL_TIMDeactivateServer.md
# Iso11783IL_TIMDeactivateServer

> Category: `ISO11783` | Type: `function`

## Syntax

```c
long Iso11783IL_TIMDeactivateServer( ); // form 1
long Iso11783IL_TIMDeactivateServer(dword options); // form 2
long Iso11783IL_TIMDeactivateServer(dbNode server); // form 3
long Iso11783IL_TIMDeactivateServer(dbNode server, dword options); // form 4
```

## Description

Deactivates the TIM server.

For a graceful shutdown the TIM server gracefully releases all TIM functions being in automation. Then it sends three times in a row the Heartbeat counter value Graceful shutdown. And at the end it stops sending any messages (including TIM_ServerStatus_Msg).

For a none graceful shutdown of the TIM server stops sending any message at once including TIM_ServerStatus_Msg).

## Parameters

| Name | Type | Description |
|---|---|---|
| Option | Value | Description |
| Graceful shutdown | 01h | Server is gracefully shutdown |
| server |  | TIM server node. |

## Availability

| CANalyzer | CANoe | CANoe4SW Server Edition (Windows) | CANoe4SW Server Edition (Linux) | CANoe4SW | vTESTstudio |  |
|---|---|---|---|---|---|---|
| Since Version | — | 11.0: form 1, 3 11.0 SP2: form 2, 4 | 13.0 | — | — | 3.0: form 3 3.0 SP2: form 4 |
| Restricted To | — | ISO11783 | ISO11783 | — | — | form 3, 4 ISO11783 |
| CANalyzer Measurement Setup (Transmit Branch) | — | N/A | N/A | N/A | N/A | N/A |
| CANoe Measurement Setup / CANalyzer Analysis Branch | — | — | — | — | N/A | N/A |
| CANoe Simulation Setup | N/A | ✔ (form 1, 2) | ✔ (form 1, 2) | — | N/A | N/A |
| CANoe System and Communication Setup | N/A | — | — | — | — | N/A |
| CANoe Test Setup for Test Modules | N/A | ✔ (form 3, 4) | ✔ (form 3, 4) | — | N/A | N/A |
| CANoe Test Setup for Test Units | N/A | ✔ (form 3, 4) | ✔ (form 3, 4) | — | — | N/A |
| 32-Bit | — | ✔ | ✔ | N/A | — | N/A |
| 64-Bit | — | ✔ | ✔ | — | — | N/A |
